test/compile-fail/fixtures/recursive-a.as
import b from "./recursive-b";

let mutable counter;

export def method() {
  counter = 5;
}

b.method();
